8215495: Set isCopy to JNI_FALSE if len == 0

Set isCopy in a corner case

Reviewed-by: dholmes, phh, minqi